--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,6 @@
 
 /* 
-
     You can write your own styles here...
-    
     
     ...Or you can use the import command to include 
     other sylesheets into your bunde as well, e.j:
@@ -10,3 +8,71 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100&display=swap');
+
+body {
+    background: black;
+}
+
+.cajacontador.container {
+    justify-content: center;
+    padding: 30px;
+    max-width: auto;
+    display: flex;
+    background: rgb(0, 0, 0);
+    margin-top: 10rem;
+}
+
+.siete{ 
+    color: white;
+    margin: 5px;
+    font-size: 50px;
+    padding: 20px;
+    border: 1px solid #353535
+
+}
+
+.seis, .cinco ,.cuatro, .tres, .dos, .uno{
+    width: 100px;
+    font-family: 'Barlow', sans-serif;
+    text-align: center;
+    color: white;
+    margin: 5px;
+    font-size: 50px;
+    padding: 20px 30px;
+    border: 1px solid #353535
+}
+
+@media only screen and (max-width: 768px) {
+    .cajacontador.container {
+      margin: 0 auto;
+      max-width: auto;
+      display: block;
+      margin-top: 10rem;
+  }
+
+  .siete{ 
+    color: white;
+    margin: 5px;
+    font-size: 50px;
+    padding: 20px;
+    border: 1px solid #353535;
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+}
+
+.seis, .cinco ,.cuatro, .tres, .dos, .uno{
+    width: 100%;
+    font-family: 'Barlow', sans-serif;
+    text-align: center;
+    color: white;
+    margin: 5px;
+    font-size: 50px;
+    padding: 20px 30px;
+    border: 1px solid #353535
+}
+
+}
